fix: solved overlap on select dropdown

--- a/src/styles/player.list.scss
+++ b/src/styles/player.list.scss
@@ -30,3 +30,11 @@
     }
   }
 }
+
+.modal-content {
+  overflow: initial;
+}
+
+.dropdown-content {
+  z-index: 999;
+}
